# BallsDex-Boss-Package

./: README.md  pyproject.toml
boss/: README.md  __init__.py  admin.py  apps.py  models.py
boss/boss/: __init__.py  cog.py  cog_fixed.py
boss/migrations/: 0001_initial.py  0002_bossbattle_weather.py
