[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ballsdex-boss"
version = "0.0.0"

description = "A travelling merchant to sell balls."
license = "MIT"
authors = [
    { name = "Haymooed" },
]
readme = "README.md"

dependencies = [

]

[project.urls]
Repository = "https://github.com/Haymooed/BallsDex-Boss-Package"
Documentation = "https://github.com/Haymooed/BallsDex-Boss-Package#readme"
Issues = "https://github.com/Haymooed/BallsDex-Boss-Package/issues"
Funding = "https://www.patreon.com/c/MarketDexOfficial"
